PCS BAckup 26Dec2023/Backup-Source/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>API_SFDC_ID__c</fullName>
        <description>Contact SFDC ID from API Org</description>
        <externalId>true</externalId>
        <label>API_SFDC_ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Affinity_Score__c</fullName>
        <label>Affinity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <label>Authority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <description>This Field only used for Data Mapping from Production</description>
        <label>Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Contact Role for OTC Customer Contacts</description>
        <label>Contact Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Email__c</fullName>
        <description>This is Definitive Field</description>
        <label>DHC Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influence_Score__c</fullName>
        <label>Influence Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Definitive_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick to make the customer visible for Definitive Record Creation</description>
        <label>Is Definitive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode_of_Contract__c</fullName>
        <description>Mode of Contract for RX Contacts</description>
        <label>Mode of Contract</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Phone_External__c</fullName>
        <label>Phone External</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Affinity_Score_Records__c</fullName>
        <description>This Field only used for Report</description>
        <formula>IF(Affinity_Score__c  &lt;&gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Affinity Score Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Authority_Records__c</fullName>
        <description>This field only used for Reports</description>
        <formula>IF(Authority__c &lt;&gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Authority Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contact_Role_Records__c</fullName>
        <description>This field only used for Reports</description>
        <formula>IF(Contact_Role__c  &lt;&gt; NULL,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contact Role Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Department_Records__c</fullName>
        <description>This field only used for Reports</description>
        <formula>IF(Department &lt;&gt; NULL,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Department Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Influence_Score_Records__c</fullName>
        <description>This field only used for Reports</description>
        <formula>IF(Influence_Score__c &lt;&gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Influence Score Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ReportsTo_Records__c</fullName>
        <description>This field only used for Reports</description>
        <formula>IF(ReportsToId &lt;&gt; NULL,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ReportsTo Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Type_Records__c</fullName>
        <description>This field only used for Reports</description>
        <formula>IF(Type__c &lt;&gt; NULL,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Type Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_ExecutiveID__c</fullName>
        <description>Id of the executive in Definitive HC system.</description>
        <label>DHC Executive ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HospitalID__c</fullName>
        <description>Definitive hospital ID to which the executive belongs</description>
        <label>Definitive ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if executive record is still active in DefinitiveHC database</description>
        <label>DHC Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_LinkedInProfile__c</fullName>
        <label>DHC LinkedIn Profile</label>
        <length>2200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Record_Changed_Date__c</fullName>
        <description>Date on which DefHC Executive record was updated.</description>
        <label>DHC Record Changed Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>